# RfgNetworking

./: .gitignore  .gitmodules  BeefProj.toml  BeefSpace.toml  BeefSpace_User.toml  License  README.md  RfgNetworking.sln
Client/: Program.cs
Server/: Program.cs
Server/Properties/: launchSettings.json
Shim/: CMakeLists.txt  CMakePresets.json
Shim/Shim/: CMakeLists.txt  IBackend.h  sw_api.cpp  sw_api.h
Shim/Shim/Backend/: BackendData.h
Shim/Shim/Backend/Debug/: DebugBackend.cpp  DebugBackend.h
Shim/Shim/Backend/IPC/: IPCBackend.cpp  IPCBackend.h
src/: Program.bf  Types.bf
src/API/: DebugWrappers.bf  SteamAPI.bf
src/Backend/: BackendData.bf  IDLLBackend.bf
src/Backend/Community/: CApps.bf  CClient.bf  CController.bf  CFriends.bf  CMatchmaking.bf  CNetworking.bf  CRemoteStorage.bf  CUser.bf  CUserStats.bf  CUtils.bf  CommunityBackend.bf
src/Backend/Debug/: DebugBackend.bf  LogWrappers.bf
src/Misc/: Extensions.bf  Helpers.bf  Logger.bf
src/Rfg/: Types.bf
src/Steam/: SteamAPI.bf
src/Win32/: Foundation.bf  KeyboardAndMouse.bf  LibraryLoader.bf  Memory.bf
